# dafny-poetry

./: API.md  IMPLEMENTATION_SUMMARY.md  POETRY_IMPLEMENTATION.md  README.md  benchmark_example.py  pyproject.toml  test_api.py
examples/: example.dfy
src/dafny_poetry/: api.py  cli.py  dafny_io.py  llm_agent.py  pareto_prover.py  poetry_alg.py  poetry_recursive.py  prompts.py  proof_tree.py  utils.py
